# REModman.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  icon.rc  ninja_build.bat  ninja_build_debug.bat  ninja_build_release.bat
dependencies/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
dependencies/glfw/: ALL_BUILD.vcxproj  GLFW.sln
dependencies/glfw/src/: glfw3.pc  update_mappings.vcxproj
glfw/: ALL_BUILD.vcxproj.filters  cmake_install.cmake
glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj.filters
res/: remodman-icon.psd
src/: Application.cpp  Crc32.cpp  FsProvider.cpp  ImGuiWindow.cpp  ImGuiWindow.h  Json.cpp  JsonUtils.cpp  JsonUtils.h  Logger.cpp  Logger.h  LuaBindings.cpp  LuaBindings.h  Manager.cpp  ManagerImpl.cpp  ManagerImpl.h  ManagerUI.cpp  ManagerUI.h  ModInfo.cpp  ModManager.cpp  ModManager.h  ModManagerConfig.cpp  ModManagerConfig.h  ModManagerData.cpp  ModManagerData.h  ModManagerDefinitions.h  ModManagerPatches.cpp  ModManagerPatches.h  Murmur3.cpp  MurmurHash.cpp  MurmurHash.h  REModman.cpp  REModman.h  RisePakPatch.cpp  RisePakPatch.h  Utils.cpp  Utils.h  Window.cpp  Window.h  imgui_window.cpp  imgui_window.h  (+14 more)
src/include/: Crc32.h  FsProvider.h  Json.h  Manager.h  ModInfo.h  Murmur3.h  RisePakPatch.h  Rules.h  Window.h
